# tiara

./: CMakeLists.txt  LICENSE  README.md  cat_bresenham.ppm  cat_dda.ppm  doxyconfig  result.ppm
docs/: Arc_8h.html  Arc_8h.js  Arc_8h_source.html  Line_8h_source.html  PPM_8h_source.html  Polygon_8h_source.html  Polyline_8h_source.html  Shape_8h_source.html  annotated.html  classtiara_1_1Canvas.js  classtiara_1_1Color-members.html  classtiara_1_1Edge-members.html  classtiara_1_1Edge.html  classtiara_1_1Line.html  classtiara_1_1Line.js  classtiara_1_1PPM-members.html  classtiara_1_1Point2d-members.html  classtiara_1_1Point2d.html  classtiara_1_1Polygon.html  classtiara_1_1Polygon.js  classtiara_1_1Shape-members.html  classtinyxml2_1_1DynArray-members.html  classtinyxml2_1_1DynArray.html  classtinyxml2_1_1MemPool.html  classtinyxml2_1_1MemPoolT-members.html  classtinyxml2_1_1MemPoolT.html  classtinyxml2_1_1StrPair-members.html  classtinyxml2_1_1XMLComment-members.html  classtinyxml2_1_1XMLDeclaration-members.html  classtinyxml2_1_1XMLDocument.html  classtinyxml2_1_1XMLDocument_1_1DepthTracker.html  classtinyxml2_1_1XMLElement-members.html  classtinyxml2_1_1XMLElement.html  classtinyxml2_1_1XMLNode.html  classtinyxml2_1_1XMLText-members.html  classtinyxml2_1_1XMLUtil-members.html  classtinyxml2_1_1XMLUtil.html  classtinyxml2_1_1XMLVisitor-members.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  (+10 more)
docs/html/: Canvas_8h_source.html  Color_8h_source.html  Edge_8h_source.html  Point2d_8h_source.html  annotated_dup.js  classes.html  classtiara_1_1Arc-members.html  classtiara_1_1Arc.html  classtiara_1_1Arc.js  classtiara_1_1Canvas-members.html  classtiara_1_1Canvas.html  classtiara_1_1Color.html  classtiara_1_1Color.js  classtiara_1_1Edge.js  classtiara_1_1Line-members.html  classtiara_1_1PPM.html  classtiara_1_1Point2d.js  classtiara_1_1Polygon-members.html  classtiara_1_1Polyline-members.html  classtiara_1_1Polyline.html  classtiara_1_1Polyline.js  classtiara_1_1Shape.html  (+38 more)
include/: Arc.h  Canvas.h  Color.h  Edge.h  Line.h  PPM.h  Point2d.h  Polygon.h  Polyline.h  Shape.h
palettes/: basic.txt  sword.txt
src/: Arc.cpp  Canvas.cpp  Color.cpp  Edge.cpp  Line.cpp  PPM.cpp  Polygon.cpp  Polyline.cpp  main.cpp  tiara.cpp  xml_test.cpp
xml/: scene.xml
(+111 files in other folders)
